实现懒加载并添加icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </script>
     <title></title>
     <!--preload-links-->
+    <link rel="icon" href="/static/icon/favicon.png" /> 
     <!--app-context-->
   </head>
   <body>
